--- a/src/Pages/Article Page/Components/ArticleContent.css
+++ b/src/Pages/Article Page/Components/ArticleContent.css
@@ -71,7 +71,7 @@
     border: 1px solid rgba(0, 0, 0, 0.1);
     display: flex;
     border-radius: 20px;
-    margin: 2%;
+    margin: 1%;
     color: #333;
   }
   .article-pagination {
@@ -192,7 +192,7 @@
   
   .chat-input input {
     flex-grow: 1;
-    padding: 10px 60px 10px 40px; /* Add padding for the flag and button */
+    padding: 20px 60px 20px 40px; /* Add padding for the flag and button */
     border-radius: 20px;
     border: 1px solid #ccc;
     position: sticky;
@@ -241,17 +241,17 @@
   }
   .streaming-content {
     width: 80%;
-    /* margin-top: 50px; */
+    margin-top: 50px;
     flex: 1;
     overflow-y: auto;
     /* max-height: calc(100vh - 300px); */
-    max-height: 400px;
+    /* max-height: 400px; */
     position: relative;
     /* padding-bottom: 50px; */
   }
   .typographyRow-articles{
     text-align: justify;
-        
+
     margin-top: 10px;
     width:fit-content; /* Ensure it takes the full width of the container */
     font-size: 15px !important;
@@ -401,7 +401,7 @@
     border: none;
     border-radius: 20px;
     cursor: pointer;
-    margin-right: 2%;
+    margin-right: 3%;
   }
   /* For the entire scrollbar */
   ::-webkit-scrollbar {
