--- a/src/Pages/searchResult/components/searchHeader.css
+++ b/src/Pages/searchResult/components/searchHeader.css
@@ -8,7 +8,7 @@
     background-position: center;
     color: white;
     margin: 2% 2% 2% 2%;
-    background: linear-gradient(90deg, #F5F9FF 0%, #FFF5FE 100%);
+    background-color: #20558a;
 }
 .Search-Nav{
     margin: 2%;
@@ -20,6 +20,8 @@
     display: flex;
     width: 90px;
     height: 34.66px;
+    background: #fff;
+    border-radius: 10px;
 }
 
 .Search-nav-links{
@@ -27,15 +29,16 @@ gap: 40px;
 display: inline-flex;
 align-items: center;
 margin: auto;
+
 }
 .Search-navlink{
     text-decoration: none;
-    color: rgba(26, 26, 26, 1);
     font-family: Manrope;
     font-size: 14px;
     font-weight: 500;
     line-height: 16.8px;
     text-align: center;
+    color: #fff;
 
 }
 
@@ -59,7 +62,7 @@ margin: auto;
 
 #search-signup-btn{
     background-color: inherit; 
-    color: rgba(26, 26, 26, 1);
+    color: #fff;
     border: 1px solid #fff;
     font-family: Manrope;
     font-size: 14px;
