Streaming and UI

--- a/src/Pages/Article Page/Components/ArticleContent.css
+++ b/src/Pages/Article Page/Components/ArticleContent.css
@@ -257,7 +257,7 @@
   width: 100%;
   /* height: 70vh;
   max-height: 700px; */
-  margin-top: 50px;
+  /* margin-top: 50px; */
   flex: 1;
   /* position: relative; */
 }
