--- a/src/Pages/Landing Page/Components/LandingContent.css
+++ b/src/Pages/Landing Page/Components/LandingContent.css
@@ -1,14 +1,14 @@
 #Landing-Content-Container{
-        position: absolute;
-        top: 80%;
-        /* width: 50%; */
-        height: 175%;
-        border-radius: 20px;
-        background-size: cover;
-        background-position: center;
-        color: white;
-        margin: 2% 2% 2% 2%;
-        padding: 0;
+    position: absolute;
+    top: 54.7%;
+    /* width: 50%; */
+    /* height: 175%; */
+    border-radius: 20px;
+    background-size: cover;
+    background-position: center;
+    color: white;
+    margin: 5% 2% 2% 2%;
+    padding: 0;
 }
 
 .WhyInfer{
@@ -26,7 +26,7 @@
     width: 100%;
     color: #010101;
     /* margin-top: 5%; */
-    margin-bottom: 5%;
+    /* margin-bottom: 5%; */
 }
 
 .WhyInfer-points{
@@ -111,8 +111,10 @@ text-align: center;
 
     width: 50%;
     margin: 0 auto;
-    margin-top: 10%;
+    /* margin-top: 10%; */
     color: black;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .faq-header {
@@ -204,29 +206,91 @@ text-align: center;
 }
 
 .Landing-footer{
+    background: linear-gradient(90deg, rgba(254, 118, 117, 0.04) 0%, rgba(204, 129, 185, 0.04) 34.2%, rgba(26, 168, 210, 0.04) 68.81%, rgba(76, 210, 217, 0.04) 100%);
+
     /* width: Fixed (1,348px)px;
     height: Hug (60px)px; */
     top: 2121px;
     left: 26px;
-    padding: 16px 32px 16px 32px;
     gap: 0px;
     justify: space-between;
-    opacity: 0px;
+    background: linear-gradient(90deg, rgba(254, 118, 117, 0.04) 0%, rgba(204, 129, 185, 0.04) 34.2%, rgba(26, 168, 210, 0.04) 68.81%, rgba(76, 210, 217, 0.04) 100%);
+    border-radius: 30px 30px 0 0;
+    margin: 1%;
+    display: flex;
+    font-size: 16px;
+    margin-bottom: 0;
+    
+}
+ .contact-info{
+    width: 25%;
+    margin-left: 2%;
+    color: black;
+    font-family: manrope;
+}
+.resources{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    gap: 4%;
+    color: black;
+    text-decoration: none;
+}
+.resources a{
+    text-decoration: none;
+}
+.faqs{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    gap: 4%;
+    color: black;
+    text-decoration: none;
+}
+.faqs a{
+    text-decoration: none;
+}
+.newsletter{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    gap: 4%;
+    color: black;
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+.newsletter-input{
+    padding: 3%;
+    width: 60%;
+    border-radius: 9px 0 0 9px;
+    border: white;
+}
+.newsletter-submit{
+    padding: 3% 0 3% 0;
+    width: 25%;
+    border-radius: 0 9px 9px 0;
+    border: white;
+    background: rgba(26, 130, 255, 1);
 }
 .footer-content{
-    background: linear-gradient(90deg, #318FFF -20.96%, #FA1AFF 179.64%);
+    
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
-    max-width: 1200px;
     margin: auto;
     border-radius: 12px;
-}.social-icons a {
+}
+.social-icons{
+    width: fit-content;
+    margin-left: 5%;
+}
+.social-icons a {
     color: #fff;
     margin: 0 10px;
     text-decoration: none;
     font-size: 20px;
+    
 }
 
 .social-icons a:hover {
@@ -239,5 +303,14 @@ text-align: center;
     font-weight: 500;
     line-height: 19.12px;
     text-align: left;
-
+    background: linear-gradient(90deg, rgba(254, 118, 117, 0.12) 0%, rgba(204, 129, 185, 0.12) 34.2%, rgba(26, 168, 210, 0.12) 68.81%, rgba(76, 210, 217, 0.12) 100%);
+    margin-top: 0;
+    padding: 1%;
+    border-radius: 0 0 30px 30px;
+}
+.footer-trademark-content{
+    margin: auto;
+    font-size: 16px;
+    width: fit-content;
+    color: #010101;
 }
