--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -21,16 +21,66 @@
     padding: 0;
 }
 .searchContent-left {
-    margin-left: 10%;
+    /* margin-left: 10%; */
     border: 1px solid #e0e0e0;
     border-radius: 8px;
     padding: 16px;
     width: 15%;
     background-color: #fff;
     height: fit-content;
+    flex-shrink: 0;
   }
-  
-  .title {
+  .searchContent-left-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 3vh;
+  }
+  .Filters-ResetAll{
+    font-family: Manrope;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 16.8px;
+    text-align: center;
+    /* margin-bottom: 12px; */
+    color: rgba(26, 130, 255, 1);
+
+  }
+  .searchfilter-options{
+    width: 100%;
+    display: flex;
+    margin: 15px 0;
+    flex-direction: column;
+    align-items: flex-start;
+    color: black;
+    font-family: manrope;
+    font-size: 18px;
+    
+
+  }
+  .searchfilter-section{
+    width: 100%;
+    border-bottom: 1px solid rgba(235, 235, 243, 1)
+  }
+  .searchfilter-section h5{
+    margin-bottom: 5px;
+    width: fit-content;
+    cursor: pointer;
+  }
+  .searchfilter-section label{
+    display: flex;
+    font-family: Manrope;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: left; 
+    margin: 3% 0;
+  }
+  .searchfilter-options-dropdown{
+    margin-bottom: 10%;
+  }
+    .title {
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 12px;
@@ -98,23 +148,45 @@
 
   .searchContent-right {
     height: fit-content;
-    margin-right: 10%;
+    margin-right: 3%;
     margin-left: 3%;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
     padding: 16px;
-    width: 56%;
+    width: 75%;
     background-color: #fff
   }
 
   .SearchResult-Count-Filters{
     display: flex;
     gap: 10px;
-    justify-content: flex-end;
+    justify-content: space-between;
     flex-direction: row;
     
   }
-
+  .SearchResult-Option-Left{
+    display: flex;
+    height: fit-content;
+    gap: 8px ;
+  }
+  .SearchResult-Save{
+    /* width: Hug (52px)px;
+    height: Fixed (28px)px; */
+    padding: 10px;
+    gap: 10px;
+    border-radius: 40px;
+    border: 1px;
+    opacity: 0px;
+    color: rgba(26, 26, 26, 1);
+  }
+  .SearchResult-Email{
+    padding: 10px;
+    gap: 10px;
+    border-radius: 40px;
+    border: 1px;
+    opacity: 0px;
+    color: rgba(26, 26, 26, 1);
+  }
   .SearchResult-count{
     font-family: Manrope;
     font-size: 14px;
@@ -125,23 +197,22 @@
     background-color: #fff;
     border: none;
   }
-  .SearchResult-Filter{
-    display: inline-flex;
-    padding: 1%;
-    height: 28px;
-    gap: 4px;
-    border-radius: 40px;
-    border: 1px solid;
-    opacity: 0px;
-    background-color: #fff;
-    cursor: pointer;
+  .SearchResult-dropdown{
+      padding: 10px;
+      gap: 12px;
+      border-radius: 50px;
+      border: 1px solid black ;
+      opacity: 0.7px;
+
   }
+
   .SearchResult-Options{
     gap: 4px;
     border: none;
     opacity: 0px;
     background-color: #fff;
     cursor: pointer;
+    height: fit-content;
   }
 
   .searchContent-articles{
@@ -163,16 +234,39 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    border: 1px solid #e0e0e0;
     border-radius: 8px;
     padding: 8px;
     background-color: #fff;
     width: 96%;
     text-align: justify;
+    border-left: 3px solid; /* Define the left border width */
+    /* border-image: linear-gradient(180deg, #FE7675, #CC81B9, #19A8D2, #4BD1D8) 1; /* Apply gradient as border */
+
+    border-top: 1px solid black; /* Top border solid black */
+    border-right: 1px solid black; /* Right border solid black */
+    border-bottom: 1px solid black; /* Bottom border solid black */
+    border-radius: 12px;
+    background-color: #fff; /* Background color */
+  }
+  .searchresult-item-header{
+    display: flex;
+    width: -webkit-fill-available;
+    justify-content: space-between;
   }
   .result-checkbox{
 
   }
+  .searchresult-title-container{
+
+  }
+  .gradient-text {
+    background: linear-gradient(90deg, #CC81B9 0%, #1AA8D2 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+  }
+  
   .searchresult-title {
     font-size: 16px;
     font-weight: bold;
@@ -188,7 +282,7 @@
   }
   .searchresult-pmid{
     font-size: 14px;
-    color: #757575;
+    color: #B4B4B8;
     margin: 0px;
   }
   
@@ -199,7 +293,7 @@ font-weight: 500;
 line-height: 20px;
 text-align: left;
 text-align: justify;
-color: rgba(26, 26, 26, 1);
+color: #000000;
 
 
   }
@@ -210,7 +304,7 @@ color: rgba(26, 26, 26, 1);
     line-height: 20px;
     text-align: left;
     text-align: justify;
-    color: rgba(26, 26, 26, 1);
+    /* color: #12b812; */
   }
   
   .searchresult-actions {
@@ -334,4 +428,161 @@ color: rgba(26, 26, 26, 1);
   line-height: 19.12px;
   text-align: left;
 
+}
+
+
+
+
+.right-aside {
+  /* width: 44px;
+  height: 88px; */
+  display: flex;
+  gap: 0px;
+  opacity: 0px;
+  height: fit-content;
+  /* border: 1px solid rgba(235, 235, 243, 1); */
+}
+.annotate {
+  width: 349px;
+  height: 514px;
+  gap: 0px;
+  border-radius: 16px;
+  margin: 5%;
+  opacity: 0px;
+  border: 1px solid rgba(235, 235, 243, 1);
+  background: #FBFBFD;
+}
+.notes {
+  width: 349px;
+  height: 542px;
+  gap: 0px;
+  border-radius: 16px;
+  margin: 5%;
+  opacity: 0px;
+  border: 1px solid rgba(235, 235, 243, 1);
+  background-color: rgba(235, 235, 243, 0.5);
+}
+.note-taking {
+  width: 100%;
+  height: 514px;
+  box-sizing: border-box;
+  background-color: rgba(235, 235, 243, 1);
+  border: 1px soild rgba(235, 235, 243, 1);
+  flex: 1;
+  border: none;
+  outline: none;
+  background: transparent;
+  resize: none;
+  font-size: 14px;
+  font-family: Manrope;
+}
+.icons-group {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+}
+.notes p {
+  color: black;
+  width: 40px;
+  height: 20px;
+  gap: 0px;
+  opacity: 0px;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
+  margin-left: 17px;
+
+  /* text-align: start; */
+}
+.annotate-icon {
+  border: 1px solid rgba(235, 235, 243, 1);
+  border-radius: 8px;
+  padding: 10px;
+}
+.notes-icon {
+  border: 1px solid rgba(235, 235, 243, 1);
+  /* background-color: rgba(235, 244, 255, 1); */
+  border-radius: 8px;
+  padding: 10px;
+}
+.tables p {
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: left;
+  color: black;
+  margin: 3%    ;
+}
+.Annotate-tables{
+  margin: 3%;
+}
+.table-head {
+  border-bottom: 1px solid;
+}
+.annotate-icon,
+.notes-icon {
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.annotate-icon.open {
+  background-color: rgba(235, 244, 255, 1);
+}
+
+.annotate-icon.closed {
+  background-color: white;
+}
+
+.notes-icon.open {
+  background-color: rgba(235, 244, 255, 1);
+}
+
+.notes-icon.closed {
+  background-color: white;
+}
+/* Add custom border-bottom for each row */
+.table-row td {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.table-head {
+  border-bottom: 2px solid #ddd;
+}
+/* Add border-left for each th element */
+.table-head th {
+  border-left: 1px solid #ddd;
+}
+
+/* Add overall table border styles */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+th {
+  text-decoration: none;
+}
+th,
+td {
+  padding: 8px; /* Optional padding for readability */
+  text-align: left; /* Optional for alignment */
+  text-decoration: none;
+  color: black;
+  font-family: Manrope;
+  font-size: small;
+  padding-left: 10px;
+}
+.save-button {
+  background-color: rgba(255, 255, 255, 1);
+  width: 20%;
+  height: 40px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 15px;
+  color: rgba(26, 130, 255, 1);
+  font-weight: 500;
+  margin: 6px 6px 0 0;
 }
