--- a/src/Pages/Landing Page/Components/LandingHeader.css
+++ b/src/Pages/Landing Page/Components/LandingHeader.css
@@ -1,18 +1,18 @@
 #Header-Nav-Container{
-    background-image: url("../../../images/nav-background-image.png");
+    background-image: url("../../../images/image\ \(1\).svg");
     position: absolute;
     top: 2%;
     width: 96%;
-    height: 64%;
+    /* height: 32%; */
     border-radius: 20px;
     background-size: cover;
     background-position: center;
     color: white;
     margin: 2% 2% 2% 2%;
-    border: 2px solid black;    
+        /* border: 2px solid black;     */
 }
 .Header-Nav{
-    margin: 2%;
+    margin: 2% 2% 0 2%;
 }
 .Header-Nav-Items{
     display: flex;
@@ -24,22 +24,52 @@
 }
 
 .nav-links{
-gap: 40px;
-display: inline-flex;
-align-items: center;
-margin: auto;
+    gap: 40px;
+    display: inline-flex;
+    align-items: center;
+    margin: auto;
+    border: 1px solid #FFFFFF;
+    border-radius: 10px;
+    padding: 10px;
+    background: #fff;
+    background: #FFFFFF80;
+    border: 1px solid #FFFFFF;
+
 }
+  
 .navlink{
-    text-decoration: none;
-    color: #FFFFFF;
     font-family: Manrope;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 16.8px;
     text-align: center;
 
-}
+    text-decoration: none;
+    color: black;
 
+}
+.navlink {
+    position: relative;
+    text-decoration: none; /* Remove default underline */
+    color: black; /* Default link color */
+    padding-bottom: 5px; /* Space for the underline */
+  }
+  
+  .navlink::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #007bff; /* Line color */
+    transition: width 0.3s ease-in-out;
+  }
+  
+  .navlink.active::after {
+    width: 100%; /* Full width underline when active */
+  }
+  
 .nav-login{
     display: flex;
     align-items: center;
@@ -59,8 +89,8 @@ margin: auto;
 }
 
 #signup-btn{
-    background-color: inherit; 
-    color: #fff;
+    background: #FFFFFF; 
+    color: #1A82FF;
     border: 1px solid #fff;
     font-family: Manrope;
     font-size: 14px;
@@ -70,7 +100,9 @@ margin: auto;
 
 }
 #login-btn{
-    color: #0069E5;
+    background: #1A82FF;
+
+    color: #fff;
     font-family: Manrope;
     font-size: 14px;
     font-weight: 600;
@@ -111,18 +143,22 @@ margin: auto;
 }   
 
 .searchbar-header {
-margin-bottom: 0;
+margin: 2% auto;
 }
 
 .searchbar-outer{
     width: 60%;
-    height: 181px;
+    height: 15vh;
     gap: 32px;
     border-radius: 24px;
-    border: 1px 0px 0px 0px;
+    border: 1px solid #FFFFFF;
+    margin-top: 2%;
+    position: relative;
+    left: 20%;
+    top: 10%;
+    margin-bottom: 2%;
     background: rgba(250, 250, 250, 0.2);
-    position: absolute;
-    left: 20%;  
+
 }
 
 .autocomplete{
