--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -148,8 +148,8 @@
 
   .searchContent-right {
     height: fit-content;
-    margin-right: 3%;
-    margin-left: 3%;
+    margin-right: 1%;
+    margin-left: 1%;
     border: 1px solid #e0e0e0;
     border-radius: 8px;
     padding: 16px;
@@ -237,7 +237,7 @@
     border-radius: 8px;
     padding: 8px;
     background-color: #fff;
-    width: 96%;
+    width: 100%;
     text-align: justify;
     border-left: 3px solid; /* Define the left border width */
     /* border-image: linear-gradient(180deg, #FE7675, #CC81B9, #19A8D2, #4BD1D8) 1; /* Apply gradient as border */
@@ -447,7 +447,7 @@ color: #000000;
   height: 514px;
   gap: 0px;
   border-radius: 16px;
-  margin: 5%;
+  margin: 0 5% 0 0;
   opacity: 0px;
   border: 1px solid rgba(235, 235, 243, 1);
   background: #FBFBFD;
@@ -457,7 +457,8 @@ color: #000000;
   height: 542px;
   gap: 0px;
   border-radius: 16px;
-  margin: 5%;
+  margin: 0 5% 0 0;
+  
   opacity: 0px;
   border: 1px solid rgba(235, 235, 243, 1);
   background-color: rgba(235, 235, 243, 0.5);
@@ -470,6 +471,7 @@ color: #000000;
   border: 1px soild rgba(235, 235, 243, 1);
   flex: 1;
   border: none;
+  padding: 3%;
   outline: none;
   background: transparent;
   resize: none;
