--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -433,7 +433,7 @@ color: #000000;
 
 
 
-.right-aside {
+.search-right-aside {
   /* width: 44px;
   height: 88px; */
   display: flex;
@@ -442,7 +442,7 @@ color: #000000;
   height: fit-content;
   /* border: 1px solid rgba(235, 235, 243, 1); */
 }
-.annotate {
+.search-annotate {
   width: 349px;
   height: 514px;
   gap: 0px;
@@ -452,7 +452,7 @@ color: #000000;
   border: 1px solid rgba(235, 235, 243, 1);
   background: #FBFBFD;
 }
-.notes {
+.search-notes {
   width: 349px;
   height: 542px;
   gap: 0px;
@@ -463,7 +463,7 @@ color: #000000;
   border: 1px solid rgba(235, 235, 243, 1);
   background-color: rgba(235, 235, 243, 0.5);
 }
-.note-taking {
+.search-note-taking {
   width: 100%;
   height: 514px;
   box-sizing: border-box;
@@ -478,12 +478,12 @@ color: #000000;
   font-size: 14px;
   font-family: Manrope;
 }
-.icons-group {
+.search-icons-group {
   gap: 10px;
   display: flex;
   flex-direction: column;
 }
-.notes p {
+.search-notes p {
   color: black;
   width: 40px;
   height: 20px;
@@ -498,18 +498,18 @@ color: #000000;
 
   /* text-align: start; */
 }
-.annotate-icon {
+.search-annotate-icon {
   border: 1px solid rgba(235, 235, 243, 1);
   border-radius: 8px;
   padding: 10px;
 }
-.notes-icon {
+.search-notes-icon {
   border: 1px solid rgba(235, 235, 243, 1);
   /* background-color: rgba(235, 244, 255, 1); */
   border-radius: 8px;
   padding: 10px;
 }
-.tables p {
+.search-tables p {
   font-family: Manrope;
   font-size: 14px;
   font-weight: 600;
@@ -518,43 +518,43 @@ color: #000000;
   color: black;
   margin: 3%    ;
 }
-.Annotate-tables{
+.search-Annotate-tables{
   margin: 3%;
 }
-.table-head {
+.search-table-head {
   border-bottom: 1px solid;
 }
-.annotate-icon,
-.notes-icon {
+.search-annotate-icon,
+.search-notes-icon {
   cursor: pointer;
   transition: color 0.3s ease;
 }
 
-.annotate-icon.open {
+.search-annotate-icon.open {
   background-color: rgba(235, 244, 255, 1);
 }
 
-.annotate-icon.closed {
+.search-annotate-icon.closed {
   background-color: white;
 }
 
-.notes-icon.open {
+.search-notes-icon.open {
   background-color: rgba(235, 244, 255, 1);
 }
 
-.notes-icon.closed {
+.search-notes-icon.closed {
   background-color: white;
 }
 /* Add custom border-bottom for each row */
-.table-row td {
+.search-table-row td {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.table-head {
+.search-table-head {
   border-bottom: 2px solid #ddd;
 }
 /* Add border-left for each th element */
-.table-head th {
+.search-table-head th {
   border-left: 1px solid #ddd;
 }
 
@@ -576,7 +576,7 @@ td {
   font-size: small;
   padding-left: 10px;
 }
-.save-button {
+.search-save-button {
   background-color: rgba(255, 255, 255, 1);
   width: 20%;
   height: 40px;
