--- a/src/Pages/Landing Page/Components/LandingContent.css
+++ b/src/Pages/Landing Page/Components/LandingContent.css
@@ -36,7 +36,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     max-width: 800px;
-    width: 50%;
+    width: 75%;
     margin-top: 5%;
     margin: auto;
 }
@@ -218,46 +218,92 @@ text-align: center;
     border-radius: 30px 30px 0 0;
     margin: 1%;
     display: flex;
-    font-size: 16px;
+    font-size: 12px;
     margin-bottom: 0;
     
 }
  .contact-info{
-    width: 25%;
-    margin-left: 2%;
-    color: black;
-    font-family: manrope;
-}
-.resources{
-    width: 25%;
     display: flex;
     flex-direction: column;
-    gap: 4%;
-    color: black;
-    text-decoration: none;
+    height: fit-content;
+    text-align: justify;
+    margin-left: 0%;
+    color: #010101;
+    font-family: manrope;
+    margin: auto;
+    margin-left: 3.5%;
+
+}
+.contact-info h3{
+    margin: 0;
+    width: fit-content;
+}
+.contact-info p{
+    width: fit-content;
+    margin: 0;
+    width: 67%;
+    color: #1A1A1A;
+    font-weight: 600;
+
+}
+.resources{
+    display: flex;
+    flex-direction: column;
+    height: fit-content;
+    text-align: justify;
+    margin-left: 0%;
+    color: #010101;
+    font-family: manrope;
+    margin: auto;
+    margin-left: 3.5%;
+    width: 25%;
+}
+.resources h3{
+    margin: 0;
+    width: fit-content;
+    
 }
 .resources a{
     text-decoration: none;
+    color: #1A1A1A;
+    font-weight: 600;
 }
 .faqs{
-    width: 25%;
     display: flex;
     flex-direction: column;
-    gap: 4%;
-    color: black;
-    text-decoration: none;
+    height: fit-content;
+    text-align: justify;
+    margin-left: 0%;
+    color: #010101;
+    font-family: manrope;
+    margin: auto;
+    margin-left: 3.5%;
+    width: 25%;
+}
+.faqs h3{
+    margin: 0;
+    width: fit-content;
 }
 .faqs a{
     text-decoration: none;
+    color: #1A1A1A;
+    font-weight: 600;
 }
 .newsletter{
-    width: 25%;
     display: flex;
     flex-direction: column;
-    gap: 4%;
-    color: black;
-    text-decoration: none;
-    margin-bottom: 5px;
+    height: fit-content;
+    text-align: justify;
+    margin-left: 0%;
+    color: #010101;
+    font-family: manrope;
+    margin: auto;
+    margin-left: 3.5%;
+    width: 25%;
+}
+.newsletter h3{
+    margin: 0;
+    width: fit-content;
 }
 .newsletter-input{
     padding: 3%;
@@ -283,13 +329,14 @@ text-align: center;
 }
 .social-icons{
     width: fit-content;
-    margin-left: 5%;
+    /* margin-left: 5%; */
 }
 .social-icons a {
     color: #fff;
-    margin: 0 10px;
+    margin: 0 20px 0 0;
     text-decoration: none;
     font-size: 20px;
+
     
 }
 
@@ -310,7 +357,7 @@ text-align: center;
 }
 .footer-trademark-content{
     margin: auto;
-    font-size: 16px;
+    font-size: 14px;
     width: fit-content;
     color: #010101;
 }
