--- a/src/Pages/Article Page/Components/ArticleContent.css
+++ b/src/Pages/Article Page/Components/ArticleContent.css
@@ -127,7 +127,7 @@
   gap: 28px;
   border-radius: 20px;
   flex: 1;
-  padding: 20px;
+  padding: 0 20px 20px 20px;
   border: 1px solid rgba(235, 235, 243, 1);
 }
 .title {
@@ -136,6 +136,10 @@
   margin-bottom: 16px;
   font-weight: 600;
   font-size: 16px;
+  position: sticky;  /* Makes it stick to a position */
+  top: 0;  /* Sticks to the top of the screen */
+  z-index: 1000;  /* Ensures it's above other content */
+  background: #fff;
 }
 .content-brake{
  border: 1px solid #97B0C8;
@@ -239,7 +243,7 @@
   transition: color 0.3s ease;
   /* border: 0px, 0px, 10px, 0px; */
   border-bottom: 1px solid rgba(235, 235, 243, 1);
-  margin-left: 10%;
+  /* margin-left: 10%; */
 }
 .history-pagination ul li a {
   text-decoration: none;
@@ -281,7 +285,10 @@
   height: 1px;
 }
 .history-pagination ul li + li {
-  margin-top: 20px;
+  /* margin-top: 20px; */
+}
+.custom-bold {
+  font-weight: 900; /* Increase the boldness */
 }
 
 /* .history-pagination h5 {
@@ -374,7 +381,7 @@
 
 .stream-flag-logo {
   position: absolute;
-  left: 30px;
+  left: 2%;
   top: 50%;
   transform: translateY(-50%);
   height: 20px;
@@ -440,7 +447,7 @@
 }
 .annotate {
   width: 349px;
-  height: 514px;
+  height: 70vh;
   gap: 0px;
   border-radius: 16px;
   margin: 0 5% 0 0;
@@ -450,7 +457,7 @@
 }
 .notes {
   width: 349px;
-  height: 542px;
+  height: 70vh;
   gap: 0px;
   border-radius: 16px;
   margin: 0 5% 0 0;
@@ -551,6 +558,10 @@
 }
 /* Add border-left for each th element */
 .table-head th {
+  border-left: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+}
+.table-row td {
   border-left: 1px solid #ddd;
 }
 
