--- a/src/Pages/Article Page/Components/ArticleContent.css
+++ b/src/Pages/Article Page/Components/ArticleContent.css
@@ -130,10 +130,10 @@
   padding: 0 20px 20px 20px;
   border: 1px solid rgba(235, 235, 243, 1);
 }
-.title {
+.article-title{
   display: flex;
   gap: 10px;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
   font-weight: 600;
   font-size: 16px;
   position: sticky;  /* Makes it stick to a position */
@@ -147,7 +147,7 @@
 } 
 .article-content .meta p {
   font-weight: 600;
-  font-size: 16px;
+  font-size: 14px;
   margin-bottom: 16px;
   color: #333;
 }
@@ -207,8 +207,8 @@
   clear: both;
   overflow-y: auto;
   color: black;
-  background: aliceblue;
-  font-size: 15px;
+  background: #f9fcfe;
+  font-size: 14px;
 }
 
 .clearfix::after {
@@ -596,4 +596,16 @@ td {
   margin: 6px 6px 0 0;
 }
 
+.back-button{
+  border: none;
+  padding: 0;
+  border-radius: 36.49px;
+  cursor: pointer;
+  /* margin-left: 10px; */
+  font-size: 14px;
+  color: rgba(26, 130, 255, 1);
+  font-weight: 600;
+  background: transparent;
+    background-color: rgba(255, 255, 255, 1);
+}
 
