--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -622,3 +622,170 @@ td {
 .search-table-row td {
   border-left: 1px solid #ddd;
 }
+.Landing-footer {
+  background: linear-gradient(
+    90deg,
+    rgba(254, 118, 117, 0.04) 0%,
+    rgba(204, 129, 185, 0.04) 34.2%,
+    rgba(26, 168, 210, 0.04) 68.81%,
+    rgba(76, 210, 217, 0.04) 100%
+  );
+
+  /* width: Fixed (1,348px)px;
+  height: Hug (60px)px; */
+  top: 2121px;
+  left: 26px;
+  gap: 0px;
+  justify: space-between;
+  background: linear-gradient(
+    90deg,
+    rgba(254, 118, 117, 0.04) 0%,
+    rgba(204, 129, 185, 0.04) 34.2%,
+    rgba(26, 168, 210, 0.04) 68.81%,
+    rgba(76, 210, 217, 0.04) 100%
+  );
+  border-radius: 30px 30px 0 0;
+  margin: 1%;
+  display: flex;
+  font-size: 12px;
+  margin-bottom: 0;
+}
+.contact-info {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  text-align: justify;
+  margin-left: 0%;
+  color: #010101;
+  font-family: manrope;
+  margin: auto;
+  margin-left: 3.5%;
+}
+.contact-info h3 {
+  margin: 0;
+  width: fit-content;
+}
+.contact-info p {
+  width: fit-content;
+  margin: 0;
+  width: 67%;
+  color: #1a1a1a;
+  font-weight: 600;
+}
+.resources {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  text-align: justify;
+  margin-left: 0%;
+  color: #010101;
+  font-family: manrope;
+  margin: auto;
+  margin-left: 3.5%;
+  width: 25%;
+}
+.resources h3 {
+  margin: 0;
+  width: fit-content;
+}
+.resources a {
+  text-decoration: none;
+  color: #1a1a1a;
+  font-weight: 600;
+}
+.faqs {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  text-align: justify;
+  margin-left: 0%;
+  color: #010101;
+  font-family: manrope;
+  margin: auto;
+  margin-left: 3.5%;
+  width: 25%;
+}
+.faqs h3 {
+  margin: 0;
+  width: fit-content;
+}
+.faqs a {
+  text-decoration: none;
+  color: #1a1a1a;
+  font-weight: 600;
+}
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  text-align: justify;
+  margin-left: 0%;
+  color: #010101;
+  font-family: manrope;
+  margin: auto;
+  margin-left: 3.5%;
+  width: 25%;
+}
+.newsletter h3 {
+  margin: 0;
+  width: fit-content;
+}
+.newsletter-input {
+  padding: 3%;
+  width: 60%;
+  border-radius: 9px 0 0 9px;
+  border: white;
+}
+.newsletter-submit {
+  padding: 3% 0 3% 0;
+  width: 25%;
+  border-radius: 0 9px 9px 0;
+  border: white;
+  background: rgba(26, 130, 255, 1);
+}
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  margin: auto;
+  border-radius: 12px;
+}
+.social-icons {
+  width: fit-content;
+  /* margin-left: 5%; */
+}
+.social-icons a {
+  color: #fff;
+  margin: 0 20px 0 0;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.social-icons a:hover {
+  color: #e0e0e0;
+}
+.footer-trademark {
+  margin: 1%;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 19.12px;
+  text-align: left;
+  background: linear-gradient(
+    90deg,
+    rgba(254, 118, 117, 0.12) 0%,
+    rgba(204, 129, 185, 0.12) 34.2%,
+    rgba(26, 168, 210, 0.12) 68.81%,
+    rgba(76, 210, 217, 0.12) 100%
+  );
+  margin-top: 0;
+  padding: 1%;
+  border-radius: 0 0 30px 30px;
+}
+.footer-trademark-content {
+  margin: auto;
+  font-size: 14px;
+  width: fit-content;
+  color: #010101;
+}
