--- a/src/Pages/Landing Page/Components/LandingHeader.css
+++ b/src/Pages/Landing Page/Components/LandingHeader.css
@@ -1,288 +1,281 @@
-#Header-Nav-Container{
-    background-image: url("../../../images/image\ \(1\).svg");
-    position: absolute;
-    top: 2%;
-    width: 96%;
-    /* height: 32%; */
-    border-radius: 20px;
-    background-size: cover;
-    background-position: center;
-    color: white;
-    margin: 2% 2% 2% 2%;
-        /* border: 2px solid black;     */
+#Header-Nav-Container {
+  background-image: url("../../../images/image\ \(1\).svg");
+  position: absolute;
+  top: 2%;
+  width: 96%;
+  /* height: 32%; */
+  border-radius: 20px;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  margin: 2% 2% 2% 2%;
+  /* border: 2px solid black;     */
 }
-.Header-Nav{
-    margin: 2% 2% 0 2%;
+.Header-Nav {
+  margin: 2% 2% 0 2%;
 }
-.Header-Nav-Items{
-    display: flex;
+.Header-Nav-Items {
+  display: flex;
 }
-.nav-logo{
-    display: flex;
-    width: 90px;
-    height: 34.66px;
+.nav-logo {
+  display: flex;
+  width: 90px;
+  height: 34.66px;
 }
 
-.nav-links{
-    gap: 40px;
-    display: inline-flex;
-    align-items: center;
-    margin: auto;
-    border: 1px solid #FFFFFF;
-    border-radius: 10px;
-    padding: 10px;
-    background: #fff;
-    background: #FFFFFF80;
-    border: 1px solid #FFFFFF;
-
+.nav-links {
+  gap: 40px;
+  display: inline-flex;
+  align-items: center;
+  margin: auto;
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+  padding: 10px;
+  background: #fff;
+  background: #ffffff80;
+  border: 1px solid #ffffff;
 }
-  
-.navlink{
-    font-family: Manrope;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 16.8px;
-    text-align: center;
 
-    text-decoration: none;
-    color: black;
+.navlink {
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 16.8px;
+  text-align: center;
 
+  text-decoration: none;
+  color: black;
 }
 .navlink {
-    position: relative;
-    text-decoration: none; /* Remove default underline */
-    color: black; /* Default link color */
-    padding-bottom: 5px; /* Space for the underline */
-  }
-  
-  .navlink::after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #007bff; /* Line color */
-    transition: width 0.3s ease-in-out;
-  }
-  
-  .navlink.active::after {
-    width: 100%; /* Full width underline when active */
-  }
-  
-.nav-login{
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 20px;
+  position: relative;
+  text-decoration: none; /* Remove default underline */
+  color: black; /* Default link color */
+  padding-bottom: 5px; /* Space for the underline */
 }
 
-.btn{
-    padding: 8px 16px; /* Adjust padding as needed */
-    border: none;
-    border-radius: 4px; /* Rounded corners */
-    font-size: 16px;
-    cursor: pointer;
-    gap: 0px;
-    border-radius: 36.49px;
-    opacity: 0px;
+.navlink::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #007bff; /* Line color */
+  transition: width 0.3s ease-in-out;
 }
 
-#signup-btn{
-    background: #FFFFFF; 
-    color: #1A82FF;
-    border: 1px solid #fff;
-    font-family: Manrope;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 19.12px;
-    text-align: left;
-
-}
-#login-btn{
-    background: #1A82FF;
-
-    color: #fff;
-    font-family: Manrope;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 19.12px;
-    text-align: left;
-    border: 1px solid #fff;
-
-}
-.Header-Nav-Content{
-    /* margin-top: 5%; */
+.navlink.active::after {
+  width: 100%; /* Full width underline when active */
 }
 
-#LandinhHeader-searchbar-box{
-    position: absolute;
-    height: 7vh;
-    width: 75%;
-    margin: auto;
-    left: 12%;
-    top: 20%;
-    /* background: #fff; */
-    /* border: 1px solid black; */
-    border-radius: 54px;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+.nav-login {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 20px;
 }
-.searchbar-divHeader{
-    margin: auto;
-    font-family: Manrope;
-    font-size: 45px;
-    font-weight: 700;
-    line-height: 68.04px;
-    letter-spacing: -0.01em;
-    text-align: center;
-    margin: 0;
-    align-items: center;
-    color: #FFFFFF;
-}   
+
+.btn {
+  padding: 8px 16px; /* Adjust padding as needed */
+  border: none;
+  border-radius: 4px; /* Rounded corners */
+  font-size: 16px;
+  cursor: pointer;
+  gap: 0px;
+  border-radius: 36.49px;
+  opacity: 0px;
+}
+
+#signup-btn {
+  background: #ffffff;
+  color: #1a82ff;
+  border: 1px solid #fff;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 19.12px;
+  text-align: left;
+}
+#login-btn {
+  background: #1a82ff;
+
+  color: #fff;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 19.12px;
+  text-align: left;
+  border: 1px solid #fff;
+}
+.Header-Nav-Content {
+  /* margin-top: 5%; */
+}
+
+#LandinhHeader-searchbar-box {
+  position: absolute;
+  height: 7vh;
+  width: 75%;
+  margin: auto;
+  left: 12%;
+  top: 20%;
+  /* background: #fff; */
+  /* border: 1px solid black; */
+  border-radius: 54px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.searchbar-divHeader {
+  margin: auto;
+  font-family: Manrope;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 68.04px;
+  letter-spacing: -0.01em;
+  text-align: center;
+  margin: 0;
+  align-items: center;
+  color: #ffffff;
+}
 
 .searchbar-header {
-margin: 2% auto;
+  margin: 2% auto;
 }
 
-.searchbar-outer{
-    width: 60%;
-    height: 15vh;
-    gap: 32px;
-    border-radius: 24px;
-    border: 1px solid #FFFFFF;
-    margin-top: 2%;
-    position: relative;
-    left: 20%;
-    top: 10%;
-    margin-bottom: 2%;
-    background: rgba(250, 250, 250, 0.2);
-
+.searchbar-outer {
+  width: 60%;
+  height: 15vh;
+  gap: 32px;
+  border-radius: 24px;
+  border: 1px solid #ffffff;
+  margin-top: 2%;
+  position: relative;
+  left: 20%;
+  top: 10%;
+  margin-bottom: 2%;
+  background: rgba(250, 250, 250, 0.2);
 }
 
-.autocomplete{
-    position: absolute;
-    /* top: 15%; */
-    width: 100%;
-    /* left: 8%; */
-    /* height: 7vh; */
-    border: 0;
-    gap: 0px;
-    border-radius: 54px 0 0 54px;
-    justify: space-between;
-    opacity: 100%;
-    color: black;
-    /* padding-left: 5%; */
-    
+.autocomplete {
+  position: absolute;
+  /* top: 15%; */
+  width: 100%;
+  /* left: 8%; */
+  /* height: 7vh; */
+  border: 0;
+  gap: 0px;
+  border-radius: 54px 0 0 54px;
+  justify: space-between;
+  opacity: 100%;
+  color: black;
+  /* padding-left: 5%; */
 }
 #LandingHeader-custom-textfield .MuiInputBase-input {
-    padding-left: 30px; /* Adjust this value to increase padding */
-  }
-.MuiAutocomplete-root .MuiOutlinedInput-root .MuiAutocomplete-endAdornment{
-    margin-right: 20% !important;
+  padding-left: 30px; /* Adjust this value to increase padding */
+}
+.MuiAutocomplete-root .MuiOutlinedInput-root .MuiAutocomplete-endAdornment {
+  margin-right: 20% !important;
 }
 
 .MuiPaper-root {
-    padding: 1px;
-    margin-bottom: 16px;
-    border-radius: 30px !important;
-    background-color: #ffffff;
-    /* border-left: 3px solid #4285f4; */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: box-shadow 0.3s ease;
-    font-family: Manrope !important;
-    font-size: 16px !important;
-    font-weight: 500 !important;
-    line-height: 16.8px !important;
-    text-align: center;
-  }
+  padding: 1px;
+  margin-bottom: 16px;
+  border-radius: 30px !important;
+  background-color: #ffffff;
+  /* border-left: 3px solid #4285f4; */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+  font-family: Manrope !important;
+  font-size: 16px !important;
+  font-weight: 500 !important;
+  line-height: 16.8px !important;
+  text-align: center;
+}
 .suggestions-list {
-    position: absolute;
-    top: 45%;
-    width: 75%;
-    left: 10%;
-    height: 46px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    background-color: white;
-    max-height: 200px;
-    overflow-y: auto;
-    z-index: 1000;
-    padding: 0;
-    margin: 0;
-    color: #010101;
-    list-style: none;
-  }
-  
-  .suggestion-item {
-    padding: 10px;
-    cursor: pointer;
-    color: black;
-  }
-  
-  .suggestion-item:hover {
-    background-color: #f0f0f0;
-  }
-.icon{
-    position: absolute;
-    left: 2%;
-    top: 30%;
-    z-index: 1;
-    color: black;
+  position: absolute;
+  top: 45%;
+  width: 75%;
+  left: 10%;
+  height: 46px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: white;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 1000;
+  padding: 0;
+  margin: 0;
+  color: #010101;
+  list-style: none;
 }
 
-#search-button{
-    position: absolute;
-    right: 1%;
-    top: 15%;
-    z-index: 1;
-    color: #FFFFFF;
-    width: 12%;
-    height: 40px;
-    padding: 0px 16px 0px 16px;
-    gap: 9.12px;
-    border-radius: 36.49px;
-    opacity: 0px;
-    font-family: Manrope;
-    font-size: 14px;
-    font-weight: 600;
-    line-height: 19.12px;
-    text-align: left;
-    background: linear-gradient(94.96deg, #5EA7FF -9.81%, #8C1AFF 119.93%);
-}
-.icon-searchbarBackdrop{
-    position: absolute;
-    left: 0;
-    top: 30%;
+.suggestion-item {
+  padding: 10px;
+  cursor: pointer;
+  color: black;
 }
 
-.icon-searchbarBackdrop_2{
-    position: absolute;
-    top: 50%;
-    left: 60%;
+.suggestion-item:hover {
+  background-color: #f0f0f0;
+}
+.icon {
+  position: absolute;
+  left: 2%;
+  top: 30%;
+  z-index: 1;
+  color: black;
 }
 
-.icon-searchbarBackdrop_3{
-    position: absolute;
-    top: 0%;
-    left: 90%;
+#search-button {
+  position: absolute;
+  right: 1%;
+  top: 10%;
+  z-index: 1;
+  color: #ffffff;
+  /* width: 10%; */
+  height: 35px;
+  padding: 0px 16px 0px 16px;
+  gap: 9.12px;
+  border-radius: 36.49px;
+  opacity: 0px;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 19.12px;
+  text-align: left;
+  background: linear-gradient(94.96deg, #5ea7ff -9.81%, #8c1aff 119.93%);
+}
+.icon-searchbarBackdrop {
+  position: absolute;
+  left: 0;
+  top: 30%;
 }
 
-.searchbar-text{
-    width: 75%;
-    align-items: center;
-    /* margin: auto; */
-    /* margin-top: 12%; */
-    position: absolute;
-    top: 50%;
-    left: 15%;
-    color: #ffffff;
-    font-family: Manrope;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 20.44px;
-    letter-spacing: 0.02em;
-    text-align: center;
+.icon-searchbarBackdrop_2 {
+  position: absolute;
+  top: 50%;
+  left: 60%;
+}
 
+.icon-searchbarBackdrop_3 {
+  position: absolute;
+  top: 0%;
+  left: 90%;
+}
+
+.searchbar-text {
+  width: 75%;
+  align-items: center;
+  /* margin: auto; */
+  /* margin-top: 12%; */
+  position: absolute;
+  top: 50%;
+  left: 15%;
+  color: #ffffff;
+  font-family: Manrope;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20.44px;
+  letter-spacing: 0.02em;
+  text-align: center;
 }
