--- a/src/Pages/Article Page/Components/ArticleContent.css
+++ b/src/Pages/Article Page/Components/ArticleContent.css
@@ -220,11 +220,13 @@
   padding: 0 15px;
 }
 .history-pagination h5 {
-  margin: 30px 0;
-  font-size: 14px;
-  font-weight: 600;
-  text-align: start;
-  margin-left: 10%;
+  width: fit-content;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: start;
+    margin-left: 10%;
+    margin: auto;
+    margin-top: 30px; 
 }
 
 .history-pagination ul {
