--- a/src/Pages/Landing Page/Components/LandingContent.css
+++ b/src/Pages/Landing Page/Components/LandingContent.css
@@ -309,7 +309,7 @@ text-align: center;
     padding: 3%;
     width: 60%;
     border-radius: 9px 0 0 9px;
-    border: white;
+    border: 1px solid #0b0b0b;
 }
 .newsletter-submit{
     padding: 3% 0 3% 0;
@@ -317,6 +317,7 @@ text-align: center;
     border-radius: 0 9px 9px 0;
     border: white;
     background: rgba(26, 130, 255, 1);
+    color: white;
 }
 .footer-content{
     
