--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -35,7 +35,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  height: 3vh;
+  /*   */
 }
 .Filters-ResetAll {
   font-family: Manrope;
@@ -244,17 +244,15 @@
   padding: 8px;
   background-color: #fff;
   width: 100%;
+  height: 20vh;
   text-align: justify;
   border-left: 3px solid;
   /* border-image: linear-gradient(45deg, #fe7675, #cc81b9, #19a8d2, #4bd1d8) 1; */
   /* Define the left border width */
   /* border-image: linear-gradient(180deg, #FE7675, #CC81B9, #19A8D2, #4BD1D8) 1; /* Apply gradient as border */
-
-  border-top: 1px solid black; /* Top border solid black */
-  border-right: 1px solid black; /* Right border solid black */
-  border-bottom: 1px solid black; /* Bottom border solid black */
   border-radius: 12px;
   background-color: #fff; /* Background color */
+  border: 1px solid #dbd7d7;
 }
 
 .searchresult-item-header {
@@ -310,23 +308,27 @@
 
 .searchresult-authors {
   font-size: 14px;
-  color: #757575;
+  color: black;
   margin: 0px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .searchresult-pmid {
-  font-size: 14px;
-  color: #b4b4b8;
-  margin: 0px;
+
+    font-size: 14px;
+    color: #2b9247;
+    margin: 0px;
+
 }
 
 .searchresult-description {
   font-family: Manrope;
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 500;
   line-height: 20px;
   text-align: left;
   text-align: justify;
   color: #000000;
+  margin-top: 5px;
 }
 .searchresult-content {
   font-family: Manrope;
@@ -734,7 +736,7 @@ td {
   padding: 3%;
   width: 60%;
   border-radius: 9px 0 0 9px;
-  border: white;
+  border: 1px solid #dbd7d7;
 }
 .newsletter-submit {
   padding: 3% 0 3% 0;
@@ -742,6 +744,7 @@ td {
   border-radius: 0 9px 9px 0;
   border: white;
   background: rgba(26, 130, 255, 1);
+  color: white;
 }
 .footer-content {
   display: flex;
