--- a/src/Pages/searchResult/components/searchContent.css
+++ b/src/Pages/searchResult/components/searchContent.css
@@ -38,11 +38,11 @@
   /*   */
 }
 .Filters-ResetAll {
-  font-family: Manrope;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 16.8px;
-  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 12px;
+  /* color: black; */
+  cursor: pointer;
   /* margin-bottom: 12px; */
   color: rgba(26, 130, 255, 1);
 }
